// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NhsNotifyHeader when authenticated matches snapshot (authenticated) 1`] = `
<DocumentFragment>
  <header
    class="nhsuk-header"
    data-module="nhsuk-header"
    data-testid="page-header"
    role="banner"
  >
    <div
      class="nhsuk-header__container nhsuk-width-container"
    >
      <div
        class="nhsuk-header__service"
      >
        <a
          aria-label="NHS Notify templates"
          class="nhsuk-header__service-logo"
          data-testid="header-logo-service-link"
          href="/message-templates"
        >
          <svg
            class="nhsuk-header__logo"
            focusable="false"
            height="40"
            role="img"
            viewBox="0 0 200 80"
            width="100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              NHS logo
            </title>
            <path
              d="M200 0v80H0V0h200Zm-27.5 5.5c-14.5 0-29 5-29 22 0 10.2 7.7 13.5 14.7 16.3l.7.3c5.4 2 10.1 3.9 10.1 8.4 0 6.5-8.5 7.5-14 7.5s-12.5-1.5-16-3.5L135 70c5.5 2 13.5 3.5 20 3.5 15.5 0 32-4.5 32-22.5 0-19.5-25.5-16.5-25.5-25.5 0-5.5 5.5-6.5 12.5-6.5a35 35 0 0 1 14.5 3l4-13.5c-4.5-2-12-3-20-3Zm-131 2h-22l-14 65H22l9-45h.5l13.5 45h21.5l14-65H64l-9 45h-.5l-13-45Zm63 0h-18l-13 65h17l6-28H117l-5.5 28H129l13.5-65H125L119.5 32h-20l5-24.5Z"
              fill="currentcolor"
            />
          </svg>
          <span
            class="nhsuk-header__service-name"
          >
            Notify
          </span>
        </a>
      </div>
      <nav
        aria-label="Account"
        class="nhsuk-header__account"
      >
        <ul
          class="nhsuk-header__account-list"
        >
          <li
            class="nhsuk-header__account-item"
            data-testid="account-display-name"
          >
            <svg
              aria-hidden="true"
              class="nhsuk-icon nhsuk-icon--user"
              focusable="false"
              height="32"
              viewBox="0 0 24 24"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 1a11 11 0 1 1 0 22 11 11 0 0 1 0-22Zm0 2a9 9 0 0 0-5 16.5V18a4 4 0 0 1 4-4h2a4 4 0 0 1 4 4v1.5A9 9 0 0 0 12 3Zm0 3a3.5 3.5 0 1 1-3.5 3.5A3.4 3.4 0 0 1 12 6Z"
              />
            </svg>
            Dr Test Example
          </li>
          <li
            class="nhsuk-header__account-item"
            data-testid="account-client-name"
          >
            NHS England
          </li>
          <li
            class="nhsuk-header__account-item"
          >
            <a
              class="auth-link nhsuk-header__account-link"
              data-testid="sign-out-link"
              href="http://localhost:3000/auth/signout"
              id="sign-out-link"
            >
              Sign out
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <nav
      aria-label="Menu"
      class="nhsuk-header__navigation"
      data-testid="navigation-links"
    >
      <div
        class="nhsuk-header__navigation-container nhsuk-width-container"
      >
        <ul
          class="nhsuk-header__navigation-list"
        >
          <li
            class="nhsuk-header__navigation-item"
          >
            <a
              class="nhsuk-header__navigation-link"
              href="/message-templates"
            >
              Templates
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </header>
</DocumentFragment>
`;

exports[`NhsNotifyHeader when unauthenticated matches snapshot (unauthenticated) 1`] = `
<DocumentFragment>
  <header
    class="nhsuk-header"
    data-module="nhsuk-header"
    data-testid="page-header"
    role="banner"
  >
    <div
      class="nhsuk-header__container nhsuk-width-container"
    >
      <div
        class="nhsuk-header__service"
      >
        <a
          aria-label="NHS Notify templates"
          class="nhsuk-header__service-logo"
          data-testid="header-logo-service-link"
          href="/message-templates"
        >
          <svg
            class="nhsuk-header__logo"
            focusable="false"
            height="40"
            role="img"
            viewBox="0 0 200 80"
            width="100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              NHS logo
            </title>
            <path
              d="M200 0v80H0V0h200Zm-27.5 5.5c-14.5 0-29 5-29 22 0 10.2 7.7 13.5 14.7 16.3l.7.3c5.4 2 10.1 3.9 10.1 8.4 0 6.5-8.5 7.5-14 7.5s-12.5-1.5-16-3.5L135 70c5.5 2 13.5 3.5 20 3.5 15.5 0 32-4.5 32-22.5 0-19.5-25.5-16.5-25.5-25.5 0-5.5 5.5-6.5 12.5-6.5a35 35 0 0 1 14.5 3l4-13.5c-4.5-2-12-3-20-3Zm-131 2h-22l-14 65H22l9-45h.5l13.5 45h21.5l14-65H64l-9 45h-.5l-13-45Zm63 0h-18l-13 65h17l6-28H117l-5.5 28H129l13.5-65H125L119.5 32h-20l5-24.5Z"
              fill="currentcolor"
            />
          </svg>
          <span
            class="nhsuk-header__service-name"
          >
            Notify
          </span>
        </a>
      </div>
      <nav
        aria-label="Account"
        class="nhsuk-header__account"
      >
        <ul
          class="nhsuk-header__account-list"
        >
          <li
            class="nhsuk-header__account-item"
          >
            <a
              class="auth-link nhsuk-header__account-link"
              data-testid="sign-in-link"
              href="http://localhost:3000/auth?redirect=%2Ftemplates%2Fcreate-and-submit-templates"
              id="sign-in-link"
            >
              Sign in
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </header>
</DocumentFragment>
`;
